change thumbnail image

--- a/playwright/index.html
+++ b/playwright/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Testing Page</title>
+    <title>edeXa Business Blockchain</title>
+    <meta property="og:title" content="edeXa Business Blockchain" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://explorer.testnet.edexa.com/" />
+    <meta
+      property="og:image"
+      content="https://edexa.network/images/thumnail_edeXa.png"
+    />
+    <meta
+      property="og:description"
+      content="edeXa Business Blockchain, private and public ecosystem built to enable scalable and business- oriented dApps for the world."
+    />
   </head>
   <body>
     <div id="root"></div>
